# gentle-introduction

./: .travis.yml  LICENSE  README.md  cabal.haskell-ci  cabal.project  gentle-introduction.cabal
.github/workflows/: haskell-ci.yml
src/Gentle/: Introduction.hs
