cabal-version: 2.2
name:          gentle-introduction
version:       2022.5
synopsis:      This is not a prelude, but rather a gentle introduction
description:
  This gentle introduction re-exports a non-clashing set of names
  from across Hackage ecosystem.

homepage:      https://github.com/phadej/gentle-introduction
license:       BSD-3-Clause
license-file:  LICENSE
author:        Oleg Grenrus
maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
copyright:     Copyright (c) 2020 Oleg Grenrus
category:      Prelude
build-type:    Simple
tested-with:   GHC ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.2

source-repository head
  type:     git
  location: https://github.com/phadej/gentle-introduction

library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
  exposed-modules:  Gentle.Introduction

  -- boot dependencies
  build-depends:
    , base        ^>=4.12.0.0 || ^>=4.13.0.0 || ^>=4.14.0.0 || ^>=4.15.0.0 || ^>=4.16.0.0
    , bytestring  ^>=0.10.8.2 || ^>=0.11.1.0
    , Cabal       ^>=2.4.0.1 || ^>=3.0.0.0 || ^>=3.2.0.0 || ^>=3.4.0.0 || ^>=3.6.0.0
    , containers  ^>=0.6.0.1
    , deepseq     ^>=1.4.4.0
    , mtl         ^>=2.2.2
    , stm         ^>=2.5.0.0
    , text        ^>=1.2.3.0

  build-depends:
    , assoc                          ^>=1.0.2
    , base-orphans                   ^>=0.8.3
    , case-insensitive               ^>=1.2.1.0
    , data-fix                       ^>=0.3.0
    , hashable                       ^>=1.4.0.0
    , indexed-traversable            ^>=0.1
    , indexed-traversable-instances  ^>=0.1
    , lattices                       ^>=2.0.2
    , scientific                     ^>=0.3.6.2
    , semialign                      ^>=1.2
    , semigroups                     ^>=0.20
    , some                           ^>=1.0.1
    , sop-core                       ^>=0.5.0.1
    , strict                         ^>=0.4
    , tagged                         ^>=0.8.6
    , these                          ^>=1.1.1.1
    , time-compat                    ^>=1.9.5
    , universe-base                  ^>=1.1.1
    , unliftio-core                  ^>=0.2.0.1
    , unordered-containers           ^>=0.2.13.0
    , uuid-types                     ^>=1.0.3
    , witherable                     ^>=0.4.1
